Fix loader z-index

--- a/css/style.css
+++ b/css/style.css
@@ -481,7 +481,7 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 2;
   animation: removeSpinner 2s forwards 3s;
   background: #EAEAEA;
   opacity: 1;
